Add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144206230-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-144206230-1');
+    </script>
+
     <meta charset="utf-8">
     
     <!-- Favicon -->
@@ -38,6 +49,8 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
